# Caffeinate

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  src  update-version.py
caffeinate/: __init__.py  __main__.py  caffeinate.py
